--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,14 @@
   display: none;
 }
 
+.about__txt-pc {
+  display: none;
+}
+
+.about__txt-hide {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   .about {
     flex-direction: row;
@@ -32,10 +40,6 @@
     display: block;
   }
 
-  .about__txt-pc {
-    display: none;
-  }
-
   .about__pic {
     border-radius: 6px;
     display: block;
@@ -45,7 +49,11 @@
   
 }
 
-@media (min-width: 1366px) {
+@media (min-width: 1440px) {
+
+  .about {
+    padding: 0 32px 27px 32px;
+  }
 
   .about__txt-pc {
     display: inline;
