--- a/css/blure.css
+++ b/css/blure.css
@@ -1,9 +1,10 @@
 .blure {
   position: fixed;
   top: 0;
-  right: 0;
+  right: -100vw;
   height: 100vh;
-  width: calc(100vw - 320px);
-  background-image: linear-gradient(90deg, #e4e4e4  1%, #fff 4%);
-  opacity: 96%;
+  width: 100vw;
+  background-image: linear-gradient(270deg, #F8F8F8 80%, rgba(248, 248, 248, 0.0001) 100%);
+  opacity: 0;
+  transition: opacity .7s;
 }
