--- a/css/communication.css
+++ b/css/communication.css
@@ -3,17 +3,14 @@
   gap: 16px;
 }
 
-.head .communication {
+.head__communication {
   display: none;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1365px) {
-
-  .head .communication {
-    display: flex;
-  }
+@media screen and (min-width: 768px) and (max-width: 1439px) {
 
   .head__communication {
+    display: flex;
     margin-left: auto;
   }
 
