--- a/css/expunder.css
+++ b/css/expunder.css
@@ -1,30 +1,36 @@
 .expunder {
+  display: inline-block;
   font-family: 'TTLakes medium';
   font-size: 16px;
   align-self: flex-start;
   background-color: #F8F8F8;
-  background-image: url(../img/expander.svg);
-  background-repeat: no-repeat;
-  background-position: 8px center;
-  padding-left: 32px;
-  height: 24px;
+  line-height: 24px;
+  vertical-align: middle;
   animation-name: scale-out;
   animation-duration: 0.3s;
+  cursor: pointer;
+}
+
+.expunder__pic {
+  display: inline-block;
+  height: 11px;
+  width: 32px;
+  background-image: url(../img/expander.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: transform .5s;
 }
 
 .expunder:hover {
   animation-name: scale-in;
   animation-duration: 0.3s;
-  scale: 1.1;
+  animation-fill-mode: forwards;
 }
 
 @media screen and (min-width: 768px) {
   
-  .expunder {
-    margin-top: 10px;
-  }
-
   .about__expunder {
-    margin-top: -17px;
+    margin-top: -7px;
   }
+  
 }
