--- a/css/menu.css
+++ b/css/menu.css
@@ -3,12 +3,45 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 46px;
+  gap: 24px;
   position: fixed;
   top: 0;
-  left: 0;
+  left: -320px;
   width: 320px;
   min-height: 100vh;
   padding: 19px 24px 32px 24px;
-  background-color: inherit;
+  background-color: #fff;
+  transition: left .6s;
+  box-shadow: 16px 0px 52px rgba(14, 24, 80, 0.2);
+}
+
+.menu__head {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.menu__footer {
+  margin-top: auto;
+}
+
+.menu__mail {
+  margin: 16px 0 12px 0;
+}
+
+.menu__phone {
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    gap: 46px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .menu {
+    left: 0;
+    box-shadow: none;
+  }
 }
